--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 	<header>
 		<nav class="flow-text">
 			<div class="nav-wrapper">
-				<a href="#" class="brand-logo right">Jamie Neill</a>
 				<a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 				<ul id="nav-mobile" class="left hide-on-med-and-down">
 					<li class="active"><a href="#">Home</a></li>
@@ -26,7 +25,7 @@
 				</ul>
 			</div>
 		</nav>
-		<ul class="sidenav" id="mobile-nav">
+		<ul class="sidenav center" id="mobile-nav">
 			<li class="active"><a href="#">Home</a></li>
 			<li><a href="projects.html">Projects</a></li>
 			<li><a href="linkedin.html">LinkedIn</a></li>
